# industrial_calibration_helpers

scripts/: combine_circlegrid_target.py  generate_chessboard_pattern.py  generate_circlegrid.py  generate_circlegrid_target.py  generate_common.py
webcam_tutorial/: CMakeLists.txt  package.xml
webcam_tutorial/launch/: extrinsic_calibration.launch  webcam.launch
webcam_tutorial/yaml/: caljob.yaml  camera.yaml  target.yaml
